# python_class

./: README.md
Google-Earth-Engine-Python-Examples/: 001_EE_Classification_Landsat_8_TOA.ipynb  005_EE_Proba-V_NDVI_Time-Series_Analysis.ipynb  agri_india.ipynb  gee_covid_no2.ipynb
PyCect/: README_pyCECT.rst  README_pyEnsSum.rst  README_pyEnsSumPop.rst  excluded_varlist.json  pyCECT.py  pyEnsLib.py  pyEnsSum.py  pyEnsSumPop.py  test_pyEnsSumPop.sh
basic_python/: notebook_tutorial_python.ipynb
dask-tutorial/: prep.py
data2gfs/: .gitignore  README.rst
data2gfs/exp/: README  configure
data2gfs/src/: Makefile  calcmet_module.f90  constant_module.f90  debug_module.f90  gfs_module.f90  ip_module.f90  main.f90  p2p_module.f90  param_module.f90  read_module.f90  type_module.f90  vcoord_def_module.f90
deep_learning/: README.md  mixed_input_dl.py  nlp_experiments.ipynb  nn_tutorial_pytorch.ipynb  patchify.py  srcnn_keras_austin_evaluation_playground.py  stratifiedkfold.ipynb  wrf_python.ipynb
download_data/: NDUI.ipynb  README.md  agera5_download.py  download_cmip6.py  download_daily_modis_gee.py  download_era5.py  download_godas_pentad.py  download_imerg.sh  gee_landsat_ts.py  godas_grb2netcdf.ipynb  imerg_hdf5_to_nc.py  models_esgf_cmip_historical_pr.txt  run_download_era5.sh  run_modis_daily_gee.py
download_data/CMIP6/: CMIP6_data_extraction_Nigeria.ipynb  ClimateModel_selection_indices.ipynb  README.md  extract_hist_ens.py
esmpy/: esmpy_functions.ipynb  esmpy_functions.py
extract_thermocline/: extract_d20.sh  extract_d20_parallel.sh
fv3gfs_ncio/test_data/: dynf000_template.nc  phyf000_template.nc
gee/: README.md  gedi_extract_clean.ipynb  raster_geotiff_xarray_gdal_ee_folium.ipynb
geopandas-tutorial/: geopandas-sownal.ipynb
gfstonc/: README.md  run_install.sh  setup.py
gfstonc/ncepsfc/: ncepsfc.ipynb  regrid_sfc.ipynb  sfc_ini.nc  sfcf00.gdas2.1979010100.nc  test_ini_  write_ncepsfc.ipynb
gfstonc/ncepsigma/: __init__.py  pyspharm.py
gfstonc/src/: _read_sfc.pyf  _read_sfcflx_nemsio.pyf  _read_sigma_spec.pyf  _write_sfc.pyf  nemsio_module.f90  nemsio_openclose.f90  read_sfc.f90  read_sigma_spec.f90  sfcio_module.f90  sfcio_module.mod
gfstonc/utils/: gfs_nemsiotonc_2d  gfs_nemsiotonc_3d
gfstonc_sfcnew_ini/: run_install.sh
gfstonc_sfcnew_ini/lib/src/shtns-2.6.5-r530/: .hgtags  COPYRIGHT  Makefile  README.md  config.status  configure.ac  run_install.sh  setup.py  setup.py.in  sht_com.c  sht_fly.c  sht_func.c  sht_legendre.c  sht_mic.c
gfstonc_sfcnew_ini/lib/src/shtns-2.6.5-r530/SHT/: SH_to_spat.c  SH_to_spat_omp.c  SHqst_to_spat_fly.c  SHs_to_spat_fly.c  SHst_to_spat_fly.c  SHt_to_spat_fly.c  SHt_to_spat_omp.c  fly_SH_to_spat.gen.c  hyb_SH_to_spat.gen.c  spat_to_SHqst.c  spat_to_SHst.c  spat_to_SHst_fly.c  spat_to_SHst_omp.c
gfstonc_sfcnew_ini/lib/src/shtns-2.6.5-r530/doc/: doxygen.conf
gfstonc_sfcnew_ini/lib/src/shtns-2.6.5-r530/examples/: SHT_example.f  SHT_fixed_m.py
gfstonc_sfcnew_ini/ncepsfc/: ncepsfc.ipynb
gfstonc_sfcnew_ini/src/: _read_sfc.pyf  _read_sigma_nemsio.pyf  _write_sfc.pyf  kinds.mod  nemsio_openclose.mod  read_sfc.f90  read_sfcflx_nemsio.f90  read_sigma_nemsio.f90  shtns.f90  shtns.mod  sigio_module.f90  write_sfc.f90
gfstonc_sfcnew_ini/utils/: gfs_sfctonc  gfs_spectonc
ndvi_gimms/: preprocess_ndvi.ipynb  preprocess_ndvi.py  rainfall_vegetation_v1.ipynb  run_preprocess_ndvi.sh
netcdf-fortran/: read_netcdf.f90
ocean-ic/: .gitignore  .gitmodules  .travis.yml  README.md  ic_stability_metric.py  makeic.py  makeic_simple.py
ocean-ic/release/: makeic.spec
ocean-ic/test/: test_ic.py
ocean-regrid/: .gitignore  .travis.yml  README.md  columns.py  godas_grid.py  grid.py  mom1_grid.py  mom_grid.py  nemo_grid.py  oras_grid.py  regrid.py  regrid.yml  regrid_simple.py  regular_grid.py  tripolar_grid.py  util.py  woa_grid.py
ocean-regrid/release/: regrid.spec
ocean-regrid/test/: test_regrid.py
parallel/: run_generate_cs.sh
project_assessments_2020/: shallow_water_final.ipynb
pycurrents_eof/: combined_eof.ipynb  combined_eof_scratch.ipynb  combined_eof_sst.ipynb  combined_eof_taux.ipynb  combined_eof_tauy.ipynb  combined_eof_test.ipynb  combined_eof_v3.ipynb  combined_eof_v5.ipynb  combined_eof_v6.ipynb  eof.ipynb  eof_scratch.ipynb  global_sst.ipynb  meof_pi_sst_wnd_ind_chk_v1.ncl  meof_pi_sst_wnd_ind_chk_v2.ncl  notebook.tex
pycurrents_eof/.ipynb_checkpoints/: combined_eof_v2-checkpoint.ipynb  combined_eof_v3-checkpoint.ipynb  combined_eof_v5-checkpoint.ipynb  global_sst-checkpoint.ipynb
pycurrents_eof/homework/: Fourier.ipynb  HOT_cruise_means.ipynb  IO_eq_MCM1.ipynb  SEM.ipynb  SEM_EDOF.ipynb  Spectrum.ipynb  (+10 more)
python_class/: cape_cin_wrf_python_lcl_lfc.ipynb
satellite/: gsmap_reader.ipynb  gsmap_reader_v3.py  mls_data_analysis_swath2grd.ipynb  mls_data_analysis_swath2grd_v1.ipynb  modis_hdf4.ipynb  run_swath2grid.sh  swath2grid.ncl  swath2grid.sh  swathhdf2nc.py
toms623/: COPYING  README.md  _stripack.f  _stripack.pyf  _toms623.f90  _toms623.pyf  setup.py
web/: README.md
xarray_tutorial/: active_break.py  advection.py  ahps_v1.ipynb  alka-eol-data.ipynb  analyse_compare_surface_restart.ipynb  cape_cin.ipynb  cape_cin.py  cape_cin_dewpoint_xarray_metpy.ipynb  cape_cin_wrf_python_lcl_lfc.ipynb  cape_cin_wrf_python_metpy_lcl_lfc_mse.ipynb  common_dates.py  common_time.py  compute_terrestrial_coupling_index.py  coupling_indices.py  create_xarray_dataarray.py  csi_ets.py  dask_parallel_xarray.py  extract_box_inner.py  gee_extract.py  grid_slopetype.ipynb  grid_soiltype.ipynb  insert_value_based_on_latlon.py  latent_heat_vaporization.py  moisture_flux_convergence.py  multiple_files_ensemble.py  multiple_subplots.py  multivariate_mutual_information.py  ocean_regrid_age.ipynb  ocean_regrid_barotropic.ipynb  ocean_regrid_bih_friction.ipynb  ocean_regrid_chl.ipynb  ocean_regrid_con_temp.ipynb  ocean_regrid_density.ipynb  ocean_regrid_temp_salt_v1.ipynb  ocean_regrid_temp_salt_v1.py  ocean_regrid_thickness.ipynb  parallel_transfer_entropy.py  parallelize.py  pattern_cor.py  pattern_corr_degrees_of_freedom.ipynb  (+13 more)
(+1002 files in other folders)
